--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,6 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
+      - name: pull latest changes
+        run: git pull origin main
+          
       - name: execute py script # run scrape.py
         run: python Scrape_Score-and-Synopsis.py
           
